# AggregatorService

./: pyproject.toml
aggregatorservice/: __main__.py
aggregatorservice/models/types/: types.py
aggregatorservice/router/: news.py  weather.py
newsaggregatorservice/: __main__.py
newsaggregatorservice/router/: news.py  weather.py
